Tue Dec  5 14:33:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-irix6.x-sgic++-nothreads.h:
          Removed

Tue Dec  5 14:30:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sunos5.4-centerline-2.x.h:
        * include/makeinclude/platform_sunos5_centerline.GNU:
          Removed centerline support

Tue Dec  5 14:07:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_sunos4_g++.GNU:
        * include/makeinclude/platform_sunos4_lucid.GNU:
        * include/makeinclude/platform_sunos4_sunc++3.x.GNU:
        * include/makeinclude/platform_sunos4_sunc++4.x.GNU:
          Removed, not supported anymore

Tue Dec  5 13:59:43 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sco-5.0.0-fsu-pthread.h:
          Deleted, fsu pthread is already removed some time ago.

Tue Dec  5 13:58:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-sco-4.2-nothread.h:
          Deleted, ancient

Tue Dec  5 13:51:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-dgux-4.11-epc.h:
        * ace/config-dgux-4.x-ghs.h:
        * include/makeinclude/platform_dgux4_epc.GNU:
        * include/makeinclude/platform_dgux4_ghs.GNU:
          Deleted

        * ace/OS_NS_Thread.cpp:
          Removed dgux support. Fixes bugzilla 2011

Tue Dec  5 13:41:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-irix5.2.h:
        * ace/config-irix5.3-g++.h:
        * ace/config-irix5.3-sgic++.h:
        * include/makeinclude/platform_irix5.2.GNU:
        * include/makeinclude/platform_irix5.3_g++.GNU:
        * include/makeinclude/platform_irix5.3_sgic++.GNU:
          Deleted

        * include/makeinclude/platform_irix6.x_common.GNU:
          Use operator ?=

        * ace/os_include/os_signal.h:
          Removed Irix 5 support, fixes bugzilla 2013.
