@@ -1,8 +1,0 @@
-/* -*- C++ -*- */
-// $Id$
-
-#ifndef ACE_AIX_VERS
-# define ACE_AIX_VERS 402
-#endif
-
-#include "ace/config-aix-4.x.h"
